[project]
name = "transform"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = [

    "pandas>=2.2.2",

    "pyarrow>=17.0.0",
    "fastparquet>=2024.5.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
